Fix error zstd and in progress correcting libjpeg-turbo error conan specific configuration 	modified:   conan/CONAN_README.txt 	modified:   conan/cmake/CMakeLists.txt 	new file:   conan/cmake/FindLibjpegTurbo.cmake 	new file:   conan/cmake/FindZstd.cmake 	new file:   conan/cmake/librdr/FindZstd.cmake 	new file:   conan/cmake/logmessages/FindZstd.cmake 	modified:   conan/cmake/vncviewer/CMakeLists.txt 	new file:   conan/cmake/vncviewer/FindLibjpegTurbo.cmake 	new file:   conan/cmake/vncviewer/FindZstd.cmake 	new file:   conan/cmake/winvnc/FindZstd.cmake 	modified:   conan/readmeConan.txt

--- a/conan/cmake/CMakeLists.txt
+++ b/conan/cmake/CMakeLists.txt
@@ -16,6 +16,10 @@ cmake_policy(POP)
 #    set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE ccache)
 #endif()
 
+# Patch Could not find a package configuration file provided by "libjpeg-turbo"
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
+# End Patch Could not find a package configuration file provided by "libjpeg-turbo"
+
 if (MINGW)
     set(CMAKE_C_FLAGS "-Wno-write-strings")
     set(CMAKE_CXX_FLAGS "-Wno-write-strings -Wno-conversion-null")
