--- a/conan/cmake/vncviewer/CMakeLists.txt
+++ b/conan/cmake/vncviewer/CMakeLists.txt
@@ -4,8 +4,13 @@ project(vncviewer LANGUAGES C CXX RC)
 #include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake) #<- Disable Using `conan_toolchain.cmake` : `conan_toolchain.cmake` and `conanbuildinfo.cmake` are not usually used together. If you use the toolchain, do not include `conanbuildinfo.cmake`.
 #conan_basic_setup() #<- Disable old Conan V1 command: " CMake Error at CMakeLists.txt:11 (conan_basic_setup): Unknown CMake command "conan_basic_setup". "
 
+# Patch Could not find a package configuration file provided by "libjpeg-turbo"
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
+# End Patch Could not find a package configuration file provided by "libjpeg-turbo"
+
 find_package(JPEG REQUIRED)
-find_package(libjpeg-turbo CONFIG REQUIRED)
+#find_package(libjpeg-turbo CONFIG REQUIRED) 	# Patch Could not find a package configuration file provided by "libjpeg-turbo"
+find_package(LibjpegTurbo REQUIRED)				#
 find_package(ZLIB REQUIRED)
 find_package(zstd REQUIRED)
 find_package(LibLZMA REQUIRED)
