Update py ant txt files, delete conan.lock files for upgrade to libjpeg-turbo/3.1.0
Not functional Create an Issue on the conan github
https://github.com/conan-io/conan/issues/17690
	modified:   conan/CONAN_README.txt
	deleted:    conan/cmake/MSLogonACL/conan.lock
	modified:   conan/cmake/MSLogonACL/conanfile.py
	deleted:    conan/cmake/SecureVNCPlugin/conan.lock
	modified:   conan/cmake/SecureVNCPlugin/conanfile.py
	deleted:    conan/cmake/authSSP/conan.lock
	modified:   conan/cmake/authSSP/conanfile.py
	deleted:    conan/cmake/authadmin/conan.lock
	modified:   conan/cmake/authadmin/conanfile.py
	deleted:    conan/cmake/conan.lock
	modified:   conan/cmake/conanfile.py
	deleted:    conan/cmake/createpassword/conan.lock
	modified:   conan/cmake/createpassword/conanfile.py
	deleted:    conan/cmake/ldapauth/conan.lock
	modified:   conan/cmake/ldapauth/conanfile.py
	deleted:    conan/cmake/ldapauth9x/conan.lock
	modified:   conan/cmake/ldapauth9x/conanfile.py
	deleted:    conan/cmake/ldapauthnt4/conan.lock
	modified:   conan/cmake/ldapauthnt4/conanfile.py
	deleted:    conan/cmake/libomnithread/conan.lock
	modified:   conan/cmake/libomnithread/conanfile.py
	deleted:    conan/cmake/librdr/conan.lock
	modified:   conan/cmake/librdr/conanfile.py
	modified:   conan/cmake/libudt4/conanfile.py
	modified:   conan/cmake/libudtcloud/conanfile.py
	deleted:    conan/cmake/libzip32/conan.lock
	modified:   conan/cmake/libzip32/conanfile.py
	deleted:    conan/cmake/libzipunzip/conan.lock
	modified:   conan/cmake/libzipunzip/conanfile.py
	deleted:    conan/cmake/logging/conan.lock
	modified:   conan/cmake/logging/conanfile.py
	deleted:    conan/cmake/logmessages/conan.lock
	modified:   conan/cmake/logmessages/conanfile.py
	deleted:    conan/cmake/repeater/conan.lock
	modified:   conan/cmake/repeater/conanfile.py
	deleted:    conan/cmake/setcad/conan.lock
	modified:   conan/cmake/setcad/conanfile.py
	deleted:    conan/cmake/setpasswd/conan.lock
	modified:   conan/cmake/setpasswd/conanfi

--- a/conan/cmake/vncviewer/CMakeLists.txt
+++ b/conan/cmake/vncviewer/CMakeLists.txt
@@ -10,7 +10,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/Modules")
 
 find_package(JPEG REQUIRED)
 #find_package(libjpeg-turbo CONFIG REQUIRED) 	# Patch Could not find a package configuration file provided by "libjpeg-turbo"
-find_package(LibjpegTurbo REQUIRED)				#
+find_package(libjpeg-turbo REQUIRED)			# Updated 2025-01-29 18:25 UMT+1
 find_package(ZLIB REQUIRED)
 find_package(zstd REQUIRED)
 find_package(LibLZMA REQUIRED)
@@ -88,7 +88,8 @@ set_source_files_properties(${CMAKE_SOURCE_DIR}/../../vncviewer/res/vncviewer.rc
 target_compile_definitions(${PROJECT_NAME} PRIVATE NDEBUG WIN32 _WINDOWS __NT__ _WINSTATIC __WIN32__ _VIEWER _XZ _CLOUD _VCPKG NOMINMAX)
 target_link_libraries(${PROJECT_NAME}
     PRIVATE JPEG::JPEG
-    PRIVATE $<IF:$<TARGET_EXISTS:libjpeg-turbo::turbojpeg>,libjpeg-turbo::turbojpeg,libjpeg-turbo::turbojpeg-static>
+    #PRIVATE $<IF:$<TARGET_EXISTS:libjpeg-turbo::turbojpeg>,libjpeg-turbo::turbojpeg,libjpeg-turbo::turbojpeg-static> 	# Patched Updated 2025-01-29 18:51 UMT+1 -> target_link_libraries(YOUR_TARGET libjpeg-turbo::libjpeg-turbo)
+	PRIVATE libjpeg-turbo::libjpeg-turbo
     PRIVATE ZLIB::ZLIB
     PRIVATE zstd::libzstd_static
     PRIVATE LibLZMA::LibLZMA
